RESOLVED FIXED204295
[LFC][Invalidation] Force rebuild layout tree on tree mutation
https://bugs.webkit.org/show_bug.cgi?id=204295
Summary [LFC][Invalidation] Force rebuild layout tree on tree mutation
alan
Reported 2019-11-18 08:08:21 PST
for now.
Attachments
Patch (3.90 KB, patch)
2019-11-18 08:11 PST, alan
no flags
Radar WebKit Bug Importer
Comment 1 2019-11-18 08:08:33 PST
alan
Comment 2 2019-11-18 08:11:32 PST
Antti Koivisto
Comment 3 2019-11-18 08:19:20 PST
Comment on attachment 383747 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=383747&action=review > Source/WebCore/rendering/updating/RenderTreeUpdater.cpp:300 > - if (!m_document.view() || m_document.view()->layoutContext().layoutFormattingState()) > + if (!m_document.view() || !m_document.view()->layoutContext().layoutFormattingState()) lol
alan
Comment 4 2019-11-18 08:29:32 PST
(In reply to Antti Koivisto from comment #3) > Comment on attachment 383747 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=383747&action=review > > > Source/WebCore/rendering/updating/RenderTreeUpdater.cpp:300 > > - if (!m_document.view() || m_document.view()->layoutContext().layoutFormattingState()) > > + if (!m_document.view() || !m_document.view()->layoutContext().layoutFormattingState()) > > lol let's just pretend it was a typo.
Antti Koivisto
Comment 5 2019-11-18 08:30:53 PST
> let's just pretend it was a typo. Yeah, quietly.
WebKit Commit Bot
Comment 6 2019-11-18 09:14:57 PST
Comment on attachment 383747 [details] Patch Clearing flags on attachment: 383747 Committed r252544: <https://trac.webkit.org/changeset/252544>
WebKit Commit Bot
Comment 7 2019-11-18 09:14:59 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.