[LFC][Invalidation] Force rebuild layout tree on tree mutation https://bugs.webkit.org/show_bug.cgi?id=204295 <rdar://problem/57283650>

Reviewed by Antti Koivisto.

This should evolve into a fine grained tree invalidation.

* rendering/updating/RenderTreeBuilder.cpp:
(WebCore::RenderTreeBuilder::attachToRenderElementInternal):
(WebCore::RenderTreeBuilder::detachFromRenderElement):
* rendering/updating/RenderTreeUpdater.cpp:
(WebCore::RenderTreeUpdater::updateRendererStyle):


Canonical link: https://commits.webkit.org/217579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252544 268f45cc-cd09-0410-ab3c-d52691b4dbfc